Skeleton of the app

--- a/_posts/2023-05-28-Ad-Astra.md
+++ b/_posts/2023-05-28-Ad-Astra.md
@@ -1,5 +1,6 @@
 ---
 title: "Ad Astra"
+summary: "My aim of this blog."
 date: 2023-05-28
 ---
 
@@ -10,4 +11,5 @@ My aim with this blog is to:
 - Share my Engineering journey, documenting any learnings I come across as I grow from a junior to a (hopefully) good engineer.
 
 ad astra,
+
 8veFable
