add engineer and blender paths

--- a/_posts/blog/2023-05-28-Ad-Astra.md
+++ b/_posts/blog/2023-05-28-Ad-Astra.md
@@ -2,6 +2,9 @@
 title: "Ad Astra"
 summary: "My aim of this blog."
 date: 2023-05-28
+category: blog
+tags:
+    - test123
 ---
 
 # Why Hello There
